# iRob

./: README.md
Assignment_2_kinematics/kinematics_assignment/scripts/: IK_functions.py
Planning/: solution.py
mapping_assignment/assignment_4_mapping/mapping_assignment_metapackage/mapping_assignment/scripts/: engine_ros.py  mapping.py
mapping_assignment/mapping_assignment/scripts/: mapping.py
ras_lab1_controllers/ras_lab1_controllers/: CMakeLists.txt  package.xml  test.py
ras_lab1_controllers/ras_lab1_open_loop_control/: CMakeLists.txt  open_loop2.py  open_loop_controller.py  package.xml
